2004-10-11  Stefan Jahn  <stefan@lkcc.org>

	* README.translations: Added a brief description about the
	translations.  Added German and French Qt standard dialog
	translations.

2004-10-10  Michael Margraf  <michael.margraf@alumni.tu-berlin.de>

	* homemade function for double to string conversion
	* class "viewpainter" to draw nice looking fonts

2004-10-04  Michael Margraf  <michael.margraf@alumni.tu-berlin.de>

	* new marker property: transparent = yes/no
	* Font size scaled with zoom -> looks nicer

2004-10-03  Stefan Jahn  <stefan@lkcc.org>

	* dialogs/simmessage.cpp (slotDisplayMsg): Fixed layout
	and progress bar filter of simulation messages.

2004-10-01  Stefan Jahn  <stefan@lkcc.org>

	* docs/es/index.html: Updated spanish documentation pages.

	* qucs_es.ts: Applied spanish translation updates.

2004-09-30  Stefan Jahn  <stefan@lkcc.org>

	* docs/Makefile.am (SUBDIRS): Added the es/ directory
	supplied by Jose L. Redrejo Rodriguez.  Thanks a lot!

	* qucsinit.cpp (slotHelpAbout): Mentioned Jose as Spanish
	translator in the About.. box.

	* qucs_es.ts: Applied the spanish translation.  Thanks to
	Jose L. Redrejo Rodriguez.

2004-09-29  Stefan Jahn  <stefan@lkcc.org>

	* docs/Makefile.am (dist_man_MANS): Added simple man page.

2004-09-26  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* placing component over wire, deletes wire
	* wire labels move correctly with paste
	* rotate and mirror wire labels correctly
	* fixed bug that did not revert the edit mode status after
	closing a project
	* changed status line text for symbol edit mode
	* fixed bug that remove node labels when rotating or
	mirroring
	* add components: vrect and irect
	* add progress bar to the simulation window

2004-09-25  Stefan Jahn  <stefan@lkcc.org>

	* paintings/painting.h: Made 'Name' a QString in order to
	allow the '==' comparisons.

	* docs/en/Makefile.am (HTML): Added missing 'programs.html'
	file to the list of installed files.
