@@ -26,16 +26,12 @@ HB_Sim::HB_Sim()
   QString  s = Description;
   int a = s.findRev(" ");
   if (a != -1) s[a] = '\n';    // break line before the word "simulation"
-  QFontMetrics  metrics(QucsSettings.largeFont);
-  QSize r = metrics.size(0, s);
-  int xb = r.width()  + 15;
-  int yb = r.height() + 15;
 
   Texts.append(new Text(0, 0, s.left(a)));
   if (a != -1) Texts.append(new Text(0, 0, s.mid(a+1)));
 
   x1 = -10; y1 = -9;
-  x2 = x1+xb+8; y2 = y1+yb+8;
+  x2 = x1+150; y2 = y1+46;
 
   tx = 0;
   ty = y2+1;
