@@ -22,11 +22,11 @@ Inductor::Inductor()
 {
   Description = QObject::tr("inductor");
 
-  Arcs.append(new Arc(-17, -6, 13, 13,  0, 16*180,QPen(QPen::darkBlue,2)));
+  Arcs.append(new Arc(-18, -6, 13, 13,  0, 16*180,QPen(QPen::darkBlue,2)));
   Arcs.append(new Arc( -6, -6, 13, 13,  0, 16*180,QPen(QPen::darkBlue,2)));
-  Arcs.append(new Arc(  5, -6, 13, 13,  0, 16*180,QPen(QPen::darkBlue,2)));
-  Lines.append(new Line(-30,  0,-17,  0,QPen(QPen::darkBlue,2)));
-  Lines.append(new Line( 17,  0, 30,  0,QPen(QPen::darkBlue,2)));
+  Arcs.append(new Arc(  6, -6, 13, 13,  0, 16*180,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line(-30,  0,-18,  0,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line( 18,  0, 30,  0,QPen(QPen::darkBlue,2)));
 
   Ports.append(new Port(-30,  0));
   Ports.append(new Port( 30,  0));
