@@ -22,19 +22,19 @@ Transformer::Transformer()
 {
   Description = QObject::tr("ideal transformer");
 
-  Arcs.append(new Arc(-16,-18, 13, 13, 16*270, 16*180,QPen(QPen::darkBlue,2)));
-  Arcs.append(new Arc(-16, -6, 13, 13, 16*270, 16*180,QPen(QPen::darkBlue,2)));
-  Arcs.append(new Arc(-16,  5, 13, 13, 16*270, 16*180,QPen(QPen::darkBlue,2)));
-  Arcs.append(new Arc(  4,-18, 13, 13,  16*90, 16*180,QPen(QPen::darkBlue,2)));
-  Arcs.append(new Arc(  4, -6, 13, 13,  16*90, 16*180,QPen(QPen::darkBlue,2)));
-  Arcs.append(new Arc(  4,  5, 13, 13,  16*90, 16*180,QPen(QPen::darkBlue,2)));
+  Arcs.append(new Arc(-16,-18,13,13, 16*270,16*180, QPen(QPen::darkBlue,2)));
+  Arcs.append(new Arc(-16, -6,13,13, 16*270,16*180, QPen(QPen::darkBlue,2)));
+  Arcs.append(new Arc(-16,  6,13,13, 16*270,16*180, QPen(QPen::darkBlue,2)));
+  Arcs.append(new Arc(  4,-18,13,13,  16*90,16*180, QPen(QPen::darkBlue,2)));
+  Arcs.append(new Arc(  4, -6,13,13,  16*90,16*180, QPen(QPen::darkBlue,2)));
+  Arcs.append(new Arc(  4,  6,13,13,  16*90,16*180, QPen(QPen::darkBlue,2)));
   Lines.append(new Line(-10,-18,-10,-30,QPen(QPen::darkBlue,2)));
   Lines.append(new Line(-10,-30,-30,-30,QPen(QPen::darkBlue,2)));
   Lines.append(new Line( 10,-18, 10,-30,QPen(QPen::darkBlue,2)));
   Lines.append(new Line( 10,-30, 30,-30,QPen(QPen::darkBlue,2)));
-  Lines.append(new Line(-10, 17,-10, 30,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line(-10, 18,-10, 30,QPen(QPen::darkBlue,2)));
   Lines.append(new Line(-10, 30,-30, 30,QPen(QPen::darkBlue,2)));
-  Lines.append(new Line( 10, 17, 10, 30,QPen(QPen::darkBlue,2)));
+  Lines.append(new Line( 10, 18, 10, 30,QPen(QPen::darkBlue,2)));
   Lines.append(new Line( 10, 30, 30, 30,QPen(QPen::darkBlue,2)));
   Lines.append(new Line( -1,-20, -1, 20,QPen(QPen::darkBlue,1)));
   Lines.append(new Line(  1,-20,  1, 20,QPen(QPen::darkBlue,1)));
