@@ -32,7 +32,8 @@ class QucsApp;
 
 struct tQucsSettings {
   int x, y, dx, dy;    // position and size of main window
-  QFont font, largeFont, smallFont;
+  QFont font;
+  float largeFontSize, smallFontSize;
   QColor BGColor;      // background color of view area
 
   unsigned int maxUndo;    // size of undo stack
