@@ -51,7 +51,6 @@ public:
   QFont    Font;
   QString  Text;
   int      Angle;
-  double   cx_d, cy_d;    // cx/cy coordinates already rotated
 };
 
 #endif
