@@ -2325,6 +2325,22 @@ Verwendung:  qucsedit [-r] Datei
         <source>overestimation of local truncation error</source>
         <translation>Überschätzung des lokalen Abbruchfehlers</translation>
     </message>
+    <message>
+        <source>initial phase in degrees</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>relative tolerance of local truncation error</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>absolute tolerance of local truncation error</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>overestimation of local truncation error</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
